# test

./: .gitignore  .nojekyll  04c_API.qmd  _quarto.yml  about.html  api.py  github_api.py  index.html  index.qmd  manip.html  manip.ipynb  polars.py  pyproject.toml  robots.txt  search.json  sitemap.xml  solutions_nt.py  test.py
.github/workflows/: dev.yml  publish.yml
04_api/: _exo1_solution.qmd  _exo2.qmd  _exo2_solution.qmd  _exo3_solution.qmd  _exo6.qmd  _get.qmd  _post.qmd
SQL/: intro.sql  sql.py
pr-preview/pr-1/: about.html  index.html  search.json
