[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4.1",
    "folium>=0.20.0",
    "great-tables>=0.20.0",
    "plotnine>=0.15.1",
    "polars>=1.35.1",
    "pynsee>=0.2.4",
    "s3fs>=2025.10.0",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
